--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -4,44 +4,46 @@
 
 <div class="row post-full">
   <div class="col-xs-12">
-    <div class="date">
+    <div class="date invisible">
       <span>{{ page.date | date_to_long_string }}</span>
     </div>
     <div class="content">
       {{ content }}
     </div>
-
+{% comment %}
   {% unless page.categories == empty %}
-    <ul class="tag_box inline">
+    <ul class="inline">
       <li><i class="glyphicon-open"></i></li>
       {% assign categories_list = page.categories %}
       {% include JB/categories_list %}
     </ul>
-  {% endunless %}  
-
+  {% endunless %}
+{% endcomment %}
+<h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>En savoir plus</h2>
   {% unless page.tags == empty %}
-    <ul class="tag_box inline">
-      <li><i class="glyphicon-tags"></i></li>
+  <div class="row">
+    <ul class="nav nav-pills nav-justified posts_box">
       {% assign tags_list = page.tags %}
+      {% assign posts_list = site.posts %}
       {% include JB/tags_list %}
     </ul>
-  {% endunless %}  
-  
-    <hr>
+  </div>
+  {% endunless %}
+
     <ul class="pagination">
     {% if page.previous %}
-      <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&laquo; Previous</a></li>
+      <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&laquo; Précédent</a></li>
     {% else %}
-      <li class="prev disabled"><a>&larr; Previous</a></li>
+      <li class="prev disabled"><a>&larr; Précédent</a></li>
     {% endif %}
-      <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
     {% if page.next %}
-      <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &raquo;</a></li>
+      <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Suivant &raquo;</a></li>
     {% else %}
-      <li class="next disabled"><a>Next &rarr;</a>
+      <li class="next disabled"><a>Suivant &rarr;</a>
     {% endif %}
     </ul>
     <hr>
     {% include JB/comments %}
   </div>
 </div>
+
