--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -13,8 +13,8 @@
 
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Optional theme -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <!-- Optional theme
+    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">-->
     <!-- Sticky Footer -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
 
@@ -41,12 +41,12 @@
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
   </head>
-
   <body>
     <div id="wrap">
 
 
       <div class="container">
+        <a href="{{ BASE_PATH }}/" title="home" id="logo"><img src="{{ ASSET_PATH }}/bootstrap/images/logo.png" class="img-responsive center-block"/></a>
         <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -56,22 +56,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-          <ul class="nav navbar-nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
-          <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
+
+              <ul class="nav nav-justified nav-pills">
+
+                {% assign categories_list = site.ELYGESTION.categories %}
+                {% assign group = 'navigation' %}
+                {% include JB/categories_list %}
+              </ul>
         </div><!-- /.navbar-collapse -->
       </nav>
         {{ content }}
@@ -79,13 +73,18 @@
     </div>
     <div id="footer">
       <div class="container">
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
-        </p>
+        <div  class="row">
+        <address>
+            <strong>ELYGESTION</strong><br>
+            795 Folsom Ave, Suite 600<br>
+            San Francisco, CA 94107<br>
+            <abbr title="Phone">Tél :</abbr> 04.90.90.90.90<br>
+            <abbr title="Fax">Fax :</abbr> 04.90.90.90.90<br>
+            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:#">first.last@example.com</a>
+          </address>
+        </div>
       </div>
-    </div id="footer">
-
+    </div>
     {% include JB/analytics %}
 
 
