--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -59,12 +59,11 @@
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-
               <ul class="nav nav-justified nav-pills">
-
                 {% assign categories_list = site.ELYGESTION.categories %}
                 {% assign group = 'navigation' %}
                 {% include JB/categories_list %}
+                <li><a href="{{ BASE_PATH }}/contact.html">Contact</a></li>
               </ul>
         </div><!-- /.navbar-collapse -->
       </nav>
