--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -4,7 +4,7 @@
 
 <div class="row post-full">
   <div class="col-xs-12">
-    <div class="date invisible">
+    <div class="date hidden">
       <span>{{ page.date | date_to_long_string }}</span>
     </div>
     <div class="content">
