--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -55,7 +55,10 @@ h2.heading { border: 1px solid #0d405e;border-width: 4px 0 1px 0; padding-top: 1
 }
 .thumbnail{
     position:relative;
-
+    border:none;
+}
+.thumbnail>img, .thumbnail a>img {
+  width:100%;
 }
 /* posts index */
 .post > h3.title {
@@ -118,9 +121,11 @@ h2.heading { border: 1px solid #0d405e;border-width: 4px 0 1px 0; padding-top: 1
   overflow: hidden; }
 
 .posts_box li {
-  line-height: 28px; }
+  width: 25%;
+  line-height: 28px;
+  display: inline-block; }
 
-.posts_box div {
+.posts_box div.jumbotron {
   margin:5px;
   padding-top: 40px;
   padding-bottom: 40px;
