--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -37,7 +37,7 @@ Nos autres mêtiers
   </div>
   {% endunless %}
 
-    <ul class="pagination">
+    <ul class="pagination visible-xs">
     {% if page.previous %}
       <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&laquo; Précédent</a></li>
     {% else %}
@@ -49,8 +49,6 @@ Nos autres mêtiers
       <li class="next disabled"><a>Suivant &rarr;</a>
     {% endif %}
     </ul>
-    <hr>
-    {% include JB/comments %}
   </div>
 </div>
 
