--- a/_includes/themes/bootstrap-3/page-home.html
+++ b/_includes/themes/bootstrap-3/page-home.html
@@ -10,7 +10,7 @@
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4">
         <div class="thumbnail">
-        <a href="{{ BASE_PATH }}/actualit%C3%A9s/2014/09/01/actualites" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_07.png" class="img-responsive center-block"/></a>
+        <a href="{{ BASE_PATH }}/actualites/2014/09/01/actualites/" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_07.png" class="img-responsive center-block"/></a>
             <div class="caption post-content">
                 <h3><a href="{{ BASE_PATH }}/actualit%C3%A9s/2014/09/01/actualites">Actualités</a></h3>
             </div>
