--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -117,7 +117,8 @@ h2.heading { border: 1px solid #0d405e;border-width: 4px 0 1px 0; padding-top: 5
 /* posts_box */
 .posts_box {
   list-style: none;
-  margin: 0;
+  margin: 20px 0;
+  padding:0;
   overflow: hidden; }
 
 .posts_box li {
