--- a/_includes/themes/bootstrap-3/post.html
+++ b/_includes/themes/bootstrap-3/post.html
@@ -1,6 +1,6 @@
 
 <div class="page-header visible-xs">
-  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
+  <h1>{{ page.title }} </h1>
 </div>
 
 <div class="row post-full">
@@ -9,6 +9,7 @@
       <span>{{ page.date | date_to_long_string }}</span>
     </div>
     <div class="content">
+      {% if page.tagline %}<h2><small>{{page.tagline}}</small></h2>{% endif %}
       {{ content }}
     </div>
 {% comment %}
