--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -75,11 +75,10 @@
         <div  class="row">
         <address>
             <strong>ELYGESTION</strong><br>
-            795 Folsom Ave, Suite 600<br>
-            San Francisco, CA 94107<br>
-            <abbr title="Phone">Tél :</abbr> 04.90.90.90.90<br>
-            <abbr title="Fax">Fax :</abbr> 04.90.90.90.90<br>
-            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:#">first.last@example.com</a>
+             76, rue Crillon<br>
+            69006 Lyon<br>
+            <abbr title="Phone">Tél :</abbr> 04.37.47.26.25<br>
+            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
         </div>
       </div>
