--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -145,7 +145,7 @@ text-align:center;}
   color:#000;
 }
 .posts_box a:hover {
-  background-color: #e5e5e5; }
+  text-decoration: underline; }
 
 .posts_box a.active {
   background: #57A957;
