--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -63,6 +63,7 @@
                 {% assign categories_list = site.ELYGESTION.categories %}
                 {% assign group = 'navigation' %}
                 {% include JB/categories_list %}
+                <li><a href="{{ BASE_PATH }}/actualites.html">Actualités</a></li>
                 <li><a href="{{ BASE_PATH }}/contact.html">Contact</a></li>
               </ul>
         </div><!-- /.navbar-collapse -->
@@ -77,8 +78,8 @@
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
             69006 Lyon<br>
-            <abbr title="Phone">Tél :</abbr> 04.37.47.26.25<br>
-            <abbr title="MAIL">MAIL :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
+            <abbr title="Phone">Tél. :</abbr> 04.37.47.26.25<br>
+            <abbr title="MAIL">E-mail :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
         </div>
       </div>
