--- a/_includes/themes/bootstrap-3/page-home.html
+++ b/_includes/themes/bootstrap-3/page-home.html
@@ -2,13 +2,13 @@
 
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="thumbnail">
-        <a href="{{ BASE_PATH }}/" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_03.png" class="img-responsive center-block"/></a>
+        <a href="{{ BASE_PATH }}/elygestion/2014/09/02/notre-societe" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_03.png" class="img-responsive center-block"/></a>
             <div class="caption post-content">
-                <h3>Property management</h3>
+                <h3><a href="{{ BASE_PATH }}/elygestion/2014/09/02/notre-societe" class="dummy">Property management</a></h3>
             </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-4">
+      <div class="col-md-4 col-sm-4 col-xs-12">
         <div class="thumbnail">
         <a href="{{ BASE_PATH }}/actualites/2014/09/01/actualites" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_07.png" class="img-responsive center-block"/></a>
             <div class="caption post-content">
@@ -16,7 +16,7 @@
             </div>
         </div>
       </div>
-      <div class="col-md-8 col-sm-8 col-xs-8">
+      <div class="col-md-8 col-sm-8 col-xs-12">
         <div class="thumbnail">
                 <a href="{{ BASE_PATH }}/nos-actifs-geres/2014/09/02/nos-actifs-geres" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_09.png" class="img-responsive center-block"/></a>
             <div class="caption post-content">
