--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -74,6 +74,7 @@
     <div id="footer">
       <div class="container">
         <div  class="row">
+          <div class="col-lg-12">
         <address>
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
@@ -81,6 +82,7 @@
             <abbr title="Phone">Tél. :</abbr> 04.37.47.26.25<br>
             <abbr title="MAIL">E-mail :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
+        </div>
         </div>
       </div>
     </div>
