--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -62,6 +62,9 @@ h2.heading { border: 1px solid #0d405e;border-width: 4px 0 1px 0; padding-top: 5
 .thumbnail>img, .thumbnail a>img {
   width:100%;
 }
+.page-header H1 {
+  text-transform: uppercase;
+}
 /* posts index */
 .post > h3.title {
   position: relative;
