--- a/_includes/themes/bootstrap-3/page-home.html
+++ b/_includes/themes/bootstrap-3/page-home.html
@@ -2,7 +2,7 @@
 
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="thumbnail">
-        <a href="{{ BASE_PATH }}/elygestion/2014/09/02/notre-societe" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_03.png" class="img-responsive center-block"/></a>
+        <a href="{{ BASE_PATH }}/elygestion/2014/09/02/notre-societe" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_03.jpg" class="img-responsive center-block"/></a>
             <div class="caption post-content">
                 <h3><a href="{{ BASE_PATH }}/elygestion/2014/09/02/notre-societe" class="dummy">Property management</a></h3>
             </div>
@@ -18,7 +18,7 @@
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <div class="thumbnail">
-                <a href="{{ BASE_PATH }}/nos-actifs-geres/2014/09/02/nos-actifs-geres" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_09.png" class="img-responsive center-block"/></a>
+                <a href="{{ BASE_PATH }}/nos-actifs-geres/2014/09/02/nos-actifs-geres" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_09.jpg" class="img-responsive center-block"/></a>
             <div class="caption post-content">
                 <h3><a href="{{ BASE_PATH }}/nos-actifs-geres/2014/09/02/nos-actifs-geres">Nos actifs gérés</a></h3>
             </div>
