--- a/_includes/themes/bootstrap-3/references.html
+++ b/_includes/themes/bootstrap-3/references.html
@@ -11,6 +11,7 @@
     <div class="content">
       {{ content }}
     </div>
+    <h3> ... et de nombreux autres références. </h3>
 
 <h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>En savoir plus</h2>
   {% unless page.tags == empty %}
