--- a/_includes/themes/bootstrap-3/references.html
+++ b/_includes/themes/bootstrap-3/references.html
@@ -10,8 +10,9 @@
 <h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>Nos références</h2>
     <div class="content">
       {{ content }}
+     <p> ... et de nombreux autres références. </p>
+
     </div>
-    <h3> ... et de nombreux autres références. </h3>
 
 <h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>En savoir plus</h2>
   {% unless page.tags == empty %}
