--- a/_includes/themes/bootstrap-3/references.html
+++ b/_includes/themes/bootstrap-3/references.html
@@ -10,11 +10,10 @@
 <h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>Nos références</h2>
     <div class="content">
       {{ content }}
-     <p> ... et de nombreux autres références. </p>
 
     </div>
 
-<h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>En savoir pluss</h2>
+<h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>En savoir plus</h2>
   {% unless page.tags == empty %}
   <div class="row">
     <ul class="nav nav-pills nav-justified posts_box">
