--- a/_includes/themes/bootstrap-3/references.html
+++ b/_includes/themes/bootstrap-3/references.html
@@ -9,7 +9,7 @@
     </div>
 <h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>Nos références</h2>
     <div class="content">
-      {{ content }}
+      {{ content }} <p>... et de nombreux autres références</p>
 
     </div>
 
