--- a/_includes/themes/bootstrap-3/references.html
+++ b/_includes/themes/bootstrap-3/references.html
@@ -12,7 +12,7 @@
       {{ content }}
     </div>
 
-<h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>En savoir plus</h2>
+<h2 class="heading"><span class="glyphicon glyphicon-bookmark"></span>En savoir pluss</h2>
   {% unless page.tags == empty %}
   <div class="row">
     <ul class="nav nav-pills nav-justified posts_box">
