--- a/_includes/themes/bootstrap-3/page-home.html
+++ b/_includes/themes/bootstrap-3/page-home.html
@@ -10,9 +10,9 @@
       </div>
       <div class="col-md-4 col-sm-4 col-xs-12">
         <div class="thumbnail">
-        <a href="https://cozimmo.com/login" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_07.png" class="img-responsive center-block"/></a>
+        <a href="https://cozimmo.com/login" target="_blank" class="dummy"><img src="{{ ASSET_PATH }}/bootstrap/images/home_07.png" class="img-responsive center-block"/></a>
             <div class="caption post-content">
-                <h3><a href="https://cozimmo.com/login">Accés client</a></h3>
+                <h3><a href="https://cozimmo.com/login" target="_blank">Accés client</a></h3>
             </div>
         </div>
       </div>
