--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -63,7 +63,7 @@
                 {% assign categories_list = site.ELYGESTION.categories %}
                 {% assign group = 'navigation' %}
                 {% include JB/categories_list %}
-                <li><a href="https://cozimmo.com/login" target="blank">Actualités</a></li>
+                <li><a href="https://cozimmo.com/login" target="blank">Accés client</a></li>
                 <li><a href="{{ BASE_PATH }}/contact.html">Contact</a></li>
               </ul>
         </div><!-- /.navbar-collapse -->
