--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -73,8 +73,8 @@
     </div>
     <div id="footer">
       <div class="container">
-        <div  class="row">
-          <div class="col-lg-12">
+        <div  class="row"><div class="col-md-4"></div>
+          <div class="col-md-4">
         <address>
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
@@ -83,6 +83,7 @@
             <abbr title="MAIL">E-mail :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
         </div>
+        <div class="col-md-4"></div>
         </div>
       </div>
     </div>
