--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -73,9 +73,10 @@
     </div>
     <div id="footer">
       <div class="container">
-        <div  class="row"><div class="col-md-4"></div>
+        <div  class="row"><div class="col-md-4"><img src="src="http://www.elygestion.fr/assets/themes/bootstrap-3/bootstrap/images/logo-footer.png"" class="img-responsive" alt="Responsive image">
+ </div>
           <div class="col-md-4">
-        <address>
+        <address style="text-align:center">
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
             69006 Lyon<br>
