--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -73,7 +73,7 @@
     </div>
     <div id="footer">
       <div class="container">
-        <div  class="row"><div class="col-md-4"><img src="src="http://www.elygestion.fr/assets/themes/bootstrap-3/bootstrap/images/logo-footer.png"" class="img-responsive" alt="Responsive image">
+        <div  class="row"><div class="col-md-4"><img src="{{ ASSET_PATH }}/bootstrap/images/logo-footer.png" class="img-responsive" alt="logo">
  </div>
           <div class="col-md-4">
         <address style="text-align:center">
