--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -73,9 +73,11 @@
     </div>
     <div id="footer">
       <div class="container">
-        <div  class="row"><div class="col-md-4"><img src="{{ ASSET_PATH }}/bootstrap/images/logo-footer.png" class="img-responsive" alt="logo">
- </div>
-          <div class="col-md-4">
+        <div  class="row">
+          <div class="col-md-3">
+            <img src="{{ ASSET_PATH }}/bootstrap/images/logo-footer.png" class="img-responsive center-block" alt="logo">
+          </div>
+          <div class="col-md-3">
         <address style="text-align:center">
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
@@ -84,7 +86,6 @@
             <abbr title="MAIL">E-mail :</abbr> <a href="mailto:contact@elygestion.fr">contact@elygestion.fr</a>
           </address>
         </div>
-        <div class="col-md-4"></div>
         </div>
       </div>
     </div>
