--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -74,10 +74,10 @@
     <div id="footer">
       <div class="container">
         <div  class="row">
-          <div class="col-md-3">
-            <img src="{{ ASSET_PATH }}/bootstrap/images/logo-footer.png" class="img-responsive center-block" alt="logo">
+          <div class="col-md-4">
+            <img src="{{ ASSET_PATH }}/bootstrap/images/logo-footer.png" class="img-responsive center-block" style="padding-top:35px" alt="logo">
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
         <address style="text-align:center">
             <strong>ELYGESTION</strong><br>
              76, rue Crillon<br>
